[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evmc-sys = { path = "./evmc-sys" }
crypto-bigint = { version = "0.5.1", features = ["rlp", "serde", "rand", "generic-array"] }
sha3 = "0.10.6"
rlp = "0.5.2"
bytes = "1.3.0"
tracing = "0.1.37"

[build-dependencies]
bindgen = "0.63.0"
cmake = "0.1.49"
